# finsimtorch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat  quickstart.rst  requirements.txt
docs/api/: distributions.rst  index.rst  models.rst  utils.rst
docs/api/distributions/: skew_student_t.rst
docs/api/models/: fractional_bm.rst  garch.rst
docs/api/utils/: torch_utils.rst
docs/examples/: fractional_bm_example.rst  garch_example.rst  index.rst
examples/: garch_demo.ipynb
finsimtorch/: __init__.py
finsimtorch/distributions/: __init__.py  skew_student_t.py
finsimtorch/models/: __init__.py  base.py  fractional_bm.py  garch.py
finsimtorch/utils/: __init__.py  torch_utils.py
tests/: __init__.py  test_fractional_bm.py  test_garch.py  test_interface_compliance.py  test_skew_student_t.py
